--- a/RxSwiftDemo/Main/Base.lproj/Main.storyboard
+++ b/RxSwiftDemo/Main/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--RxSwift-->
+        <!--RxSwift入门教程-->
         <scene sceneID="a2E-qR-vCq">
             <objects>
                 <tableViewController id="fSN-P2-oXV" customClass="MainViewController" customModule="RxSwiftDemo" customModuleProvider="target" sceneMemberID="viewController">
@@ -32,7 +32,7 @@
                             <outlet property="delegate" destination="fSN-P2-oXV" id="6h0-Ou-6aK"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="RxSwift" id="BeS-Kz-LiX"/>
+                    <navigationItem key="navigationItem" title="RxSwift入门教程" id="BeS-Kz-LiX"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ISr-Uy-R3V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
